# esp_jrnl

./: CMakeLists.txt  Kconfig  README.md  idf_component.yml  pytest.ini
.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml  upload_component.yml
examples/basic/: CMakeLists.txt  README.md  pytest_esp_jrnl_example_basic.py  sdkconfig.defaults
examples/basic/main/: CMakeLists.txt  esp_jrnl_example_basic.c
include/: esp_jrnl.h
private_include/: esp_jrnl_internal.h
srcs/: esp_jrnl.c
srcs/fatfs/diskio/: diskio_jrnl.c  diskio_jrnl.h
srcs/fatfs/vfs/: esp_vfs_jrnl_fat.h  vfs_jrnl_fat.c  vfs_jrnl_fat_spiflash.c
srcs/fatfs/vfs/private_include/: esp_vfs_jrnl_fat_private.h
test_apps/jrnl_adv/: CMakeLists.txt  README.md  pytest_esp_jrnl_adv.py  sdkconfig.defaults
test_apps/jrnl_adv/main/: CMakeLists.txt  test_esp_jrnl_adv.c
test_apps/jrnl_basic/: CMakeLists.txt  README.md  partitions.csv  pytest_esp_jrnl_basic.py  sdkconfig.defaults
test_apps/jrnl_basic/main/: CMakeLists.txt  idf_component.yml  test_esp_jrnl_basic.c
test_apps/jrnl_vfs/: CMakeLists.txt  README.md  pytest_esp_jrnl_vfs.py
test_apps/jrnl_vfs/main/: CMakeLists.txt  test_esp_jrnl_vfs.c
